--- a/bar-beer-drinker-ui/package.json
+++ b/bar-beer-drinker-ui/package.json
@@ -24,7 +24,7 @@
     "core-js": "^2.5.4",
     "highcharts": "^6.1.2",
     "jquery": "^3.3.1",
-    "popper.js": "^1.14.4",
+    "popper.js": "^1.14.5",
     "primeicons": "^1.0.0-beta.10",
     "primeng": "^6.1.3",
     "rxjs": "^6.0.0",
@@ -32,7 +32,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.7.0",
-    "@angular/cli": "~6.1.5",
+    "@angular/cli": "^7.0.5",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
     "@types/jasmine": "~2.8.6",
